@@ -81,6 +81,7 @@
 * IPG: Allow for Merchant Aggregator credential usage [DustinHaefele] #4986
 * Adyen: Add support for `metadata` object [rachelkirk] #4987
 * Xpay: New adapter basic operations added [jherreraa] #4669
+* Rapyd: Enable idempotent request support [javierpedrozaing] #4980
 
 == Version 1.135.0 (August 24, 2023)
 * PaymentExpress: Correct endpoints [steveh] #4827
